# Remote-Sensing-Waterway-Segmentation

./: .gitignore  README.md  data_exploration.ipynb  main.py  model.py  pyproject.toml  requirements.txt  sentinel_dataset.py  train.ipynb
